# sim-to-real-rl-navigation

./: README.md
rl_controller/: package.xml  setup.py
rl_controller/rl_controller/: astar.py  imu_pub.py  odom_pub.py  print_odom.py  pure_pursuit.py
rl_controller/rl_launch/: odometry.launch.py
rl_gazebo/: package.xml  setup.cfg  setup.py
rl_gazebo/models/pioneer3at/: model.sdf
rl_gazebo/rl_gazebo/: spawn_diffbot.py
rl_gazebo/rl_launch/: gazebo_world.launch.py  headless_world.launch.py  headless_world02.launch.py
rl_gazebo/worlds/: floor4x15.world  floor4x15_real.world  house.world  house_custom.world  model.config  model.world  rl_world.world  rl_world02.world
rl_robot/: package.xml  setup.cfg  setup.py
rl_robot/config/: training_params.yaml
rl_robot/logs/PPO_waypoint01_0/: events.out.tfevents.1725040410.vipho-dem.21956.0
rl_robot/rl_launch/: rl_agent.launch.py  rl_training.launch.py
rl_robot/rl_robot/: deploy_robot.py  diffbot_controller.py  diffbot_controller02.py  diffbot_controller03.py  diffbot_env.py  diffbot_env02.py  rl_agent.py  rl_agent02.py  rl_training.py
rl_rviz/: package.xml  setup.cfg  setup.py
rl_rviz/rl_launch/: rviz.launch.py  rviz_real.launch.py
rl_rviz/urdf/: core_robot.xacro  diffbot.urdf  main_robot.urdf.xacro  ros2_control.xacro
rl_slam/: CMakeLists.txt  package.xml
rl_slam/config/: local_costmap.yaml  mapper_params_online_async.yaml  nav2_params.yaml  rpi_robot_lds_2d.lua
rl_slam/launch/: online_async.launch.py  pub_map.launch.py  slam.launch.py
rl_slam/maps/: map_flood4x15.pgm  map_flood4x15.yaml
(+35 files in other folders)
