<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rl_slam</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="you@example.com">vipho</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>os</depend>
  <depend>sys</depend>
  <depend>glob</depend>
  <depend>setuptools</depend>
  <depend>launch</depend>
  <depend>ament_index_python</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>std_srvs</depend>
  <depend>functools</depend>
  <depend>gymnasium</depend>
  <depend>numpy</depend>
  <depend>stable_baselines3</depend>
  <depend>math</depend>
  <depend>optuna</depend>
  <depend>tensorboard</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
